# psf-scan

./: .gitignore  CLAUDE.md  DESIGN.json  DESIGN.md  DEVELOPER.md  PRODUCT.md  README.md  USER_GUIDE.md  diagnose_centerline.py  diagnose_gl.py  diagnose_iso.py  diagnose_mvs.py  pyproject.toml
.github/workflows/: build-and-release.yml  ci.yml
docs/: TODO.md  quickstart.tex
docs/plans/: 2026-05-09-windows-installer-design.md  2026-05-09-windows-installer-impl.md
installer/: PsfScan.iss  README.md  _make_placeholder_resources.py  build.ps1  bump_version.py  psf_scan.spec  requirements-build.txt  support_contact.example.json  version.json
installer/resources/: license.rtf  version_info.txt
scripts/: gen_docs_screenshots.py
src/psf_scan/: __init__.py  __main__.py  _bootstrap.py  _splash.py  _version.py  app.py
src/psf_scan/core/: __init__.py  autofocus.py  calibration.py  camera.py  data_io.py  diagnostics.py  i18n.py  phase.py  phase_diagnostics.py  pixel_calibration.py  profile.py  safety.py  scanner.py  sharpness.py  snapshot.py  stage.py
src/psf_scan/drivers/: __init__.py  _psf_optics.py  (+8 more)
tests/: conftest.py  test_autofocus.py  test_bootstrap.py  test_bump_version.py  test_calibration.py  test_camera_advanced.py  test_camera_controls.py  test_main_smoke.py  test_mock_camera_interference.py  test_packaging.py  test_phase.py  test_pi_scan_errors.py  test_pi_stage_poll.py  test_pixel_calibration.py  test_psf_colorbar.py  test_psf_view.py  test_psf_volume_mip_roi.py  test_settings_dialog.py  test_smoke.py  test_splash.py  test_theme_scale.py  test_version.py
(+51 files in other folders)
