[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psf_scan"
version = "1.1.5"
description = "Stage-scan PSF acquisition GUI with pluggable stage and camera drivers."
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
    "pyqtgraph>=0.13",
    "PyOpenGL>=3.1",
    "numpy>=1.24",
    "h5py>=3.10",
    "tifffile>=2024.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "Pillow>=10",
    "pipython>=2.10",
    "pyserial>=3.5",
]

[project.scripts]
psf-scan = "psf_scan.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
psf_scan = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
